Frontend-UI/Kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  labels:
    app: frontend-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
    spec:
      containers:
        - name: nginx
          image: 'IMAGE_TAG_UI_CONTAINER'
          ports:
            - containerPort: 80
