Frontend-UI/Kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ui-service
  labels:
    app: frontend-ui
spec:
  selector:
    app: frontend-ui
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
