Frontend-UI/Kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: barcode-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - barcode.local
      secretName: tls-secret
  rules:
    - host: barcode.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: nutrition-analyser-container-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-ui-service
                port:
                  number: 80
